--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "ozi",
+  "name": "undral",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-router-dom": "^7.7.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.89.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +39,6 @@
   "devDependencies": {
     "gh-pages": "^6.2.0",
     "web-vitals": "^4.2.4"
-  }
+  },
+  "homepage": "https://sammy12344.github.io/Undral"
 }
