--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "gh-pages": "^6.2.0",
     "web-vitals": "^4.2.4"
   },
-  "homepage": "https://sammy12344.github.io/Undral"
+  "homepage": "https://sammy12344.github.io/journey-bucketlist"
 }
