--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "web-vitals": "^4.2.4"
   },
-  "homepage": "https://sammy12344.github.io/undral"
+  "homepage": "https://sammy12344.github.io/journey-bucketlist"
 }
